--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "nodemon src/App.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
     "mongoose": "^7.6.3"
