--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "validator": "^13.15.26"
   }
 }
